kubernetes-yaml/selenium/selenium-node-firefox.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-node-firefox
  namespace: selenium
  labels:
    name: selenium-node-firefox
spec:
  selector:
    app: selenium-node-firefox
    browser: firefox
  ports:
    - name: port
      protocol: TCP
      port: 5555
      targetPort: 5555
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-firefox
  namespace: selenium
  labels:
    app: selenium-node-firefox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-node-firefox
  template:
    metadata:
      labels:
        app: selenium-node-firefox
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: selenium-node-firefox
          image: selenium/node-firefox:4.0.0-rc-1-prerelease-20210618
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - "export NODE_ID=$(curl -s localhost:5555/status | jq '.value.node.nodeId' -rj) && curl --request DELETE http://$SE_EVENT_BUS_HOST:4444/se/grid/distributor/node/$NODE_ID --header 'X-REGISTRATION-SECRET;'"
          #          livenessProbe:
          #            exec:
          #              command:
          #                - bash
          #                - -c
          #                - exit $([[ $(curl -s http://$SE_EVENT_BUS_HOST:4444/status | jq '.value.ready') == "false" ]] && echo 1 || echo 0)
          #            failureThreshold: 1
          #            initialDelaySeconds: 360
          #            periodSeconds: 60
          ports:
            - containerPort: 5555
              protocol: TCP
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
          resources:
            requests:
              memory: "500Mi"
              cpu: ".25"
            limits:
              memory: "500Mi"
              cpu: ".25"
      volumes:
        - name: dshm
          emptyDir: { "medium": "Memory" }
#---
#apiVersion: autoscaling/v1
#kind: HorizontalPodAutoscaler
#metadata:
#  name: selenium-node-firefox
#  namespace: selenium
#spec:
#  maxReplicas: 3
#  minReplicas: 1
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: selenium-node-firefox
#  targetCPUUtilizationPercentage: 80
